--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.9",
+    "classnames": "^2.2.6",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux-saga": "^1.1.3",
+    "scss": "^0.2.4",
     "typescript": "~3.7.2"
   },
   "scripts": {
