--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-scripts": "3.4.1",
     "redux-saga": "^1.1.3",
     "scss": "^0.2.4",
-    "typescript": "~3.7.2"
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
