--- a/package.json
+++ b/package.json
@@ -4,30 +4,23 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/classnames": "^2.2.10",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/classnames": "^2.3.1",
+    "@types/node": "^17.0.32",
+    "@types/react": "^18.0.9",
     "@types/react-phone-number-input": "^3.0.4",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
-    "axios": "^0.19.2",
-    "classnames": "^2.2.6",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-icons": "^3.10.0",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "react": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-phone-number-input": "^3.0.25",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "redux-saga": "^1.1.3",
-    "scss": "^0.2.4",
-    "typescript": "^3.9.7"
+    "sass": "^1.51.0",
+    "typescript": "^4.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
