--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Spin Hobby",
+  "name": "Spin Hobby",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "spin hobby icon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "spin hobby 192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "spin hobby 512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
