--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^7.8.2",
     "@reduxjs/toolkit": "^1.4.0",
+    "@types/bcryptjs": "^2.4.4",
     "@types/classnames": "^2.3.1",
+    "@types/js-cookie": "^3.0.4",
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "@types/react-phone-number-input": "^3.0.4",
     "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.5",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.3.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-phone-number-input": "^3.0.25",
     "react-redux": "^8.0.1",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "redux-saga": "^1.1.3",
     "sass": "^1.51.0",
