--- a/package.json
+++ b/package.json
@@ -2,38 +2,43 @@
   "name": "spin-hobby",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@paypal/react-paypal-js": "^7.8.2",
-    "@reduxjs/toolkit": "^1.4.0",
-    "@types/classnames": "^2.3.1",
-    "@types/js-cookie": "^3.0.4",
-    "@types/node": "^17.0.33",
-    "@types/react": "^18.0.9",
-    "@types/react-phone-number-input": "^3.0.4",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.3.3",
-    "axios": "^0.27.2",
-    "classnames": "^2.3.1",
+    "@paypal/react-paypal-js": "^8.1.3",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
+    "classnames": "^2.3.2",
     "js-cookie": "^3.0.5",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-icons": "^4.11.0",
-    "react-phone-number-input": "^3.0.25",
-    "react-redux": "^8.0.1",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1",
-    "redux-saga": "^1.1.3",
-    "sass": "^1.51.0",
-    "typescript": "^4.6.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-phone-number-input": "^3.3.9",
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.20.1",
+    "redux-saga": "^1.2.3"
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.3.1",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@types/react-phone-number-input": "^3.0.15",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "sass": "^1.69.5",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "browserslist": {
     "production": [
@@ -46,8 +51,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-dom": "^18.0.5"
   }
 }
