--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-phone-number-input": "^3.3.9",
